// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getArtistLine returns artist then title if not series 1`] = `
<div>
  <span
    className="music-album-artist"
  >
    test artist
  </span>
  <span>
     - 
  </span>
  <span
    className="music-album-title"
  >
    test album
  </span>
</div>
`;

exports[`getArtistLine returns title then artist if series 1`] = `
<div>
  <span
    className="music-album-title"
  >
    test album
  </span>
  <span>
     - 
  </span>
  <span
    className="music-album-artist"
  >
    test artist
  </span>
</div>
`;

exports[`getPrimaryTextClass has a dark version 1`] = `"text-light-primary"`;

exports[`getPrimaryTextClass has a light version 1`] = `"text-light-primary"`;

exports[`getTertiaryTextClass has a dark version 1`] = `"text-light-tertiary"`;

exports[`getTertiaryTextClass has a light version 1`] = `"text-light-tertiary"`;

exports[`getTertiaryTextColor has a dark version 1`] = `
Object {
  "color": "rgba(255,255,255,.5)",
}
`;

exports[`getTertiaryTextColor has a light version 1`] = `
Object {
  "color": "rgba(0,0,0,.5)",
}
`;

exports[`renders playing version 1`] = `
<div>
  <h5
    className="text-light-primary flush"
  >
    test title
  </h5>
  <h6
    className="push-bottom"
    style={
      Object {
        "color": "rgba(255,255,255,.5)",
      }
    }
  >
    <div>
      <span
        className="music-album-artist"
      >
        test artist
      </span>
      <span>
         - 
      </span>
      <span
        className="music-album-title"
      >
        test album
      </span>
    </div>
  </h6>
</div>
`;

exports[`renders with props 1`] = `
<div>
  <h4>
    test album
  </h4>
  <h6
    className="text-dark-tertiary flush"
  >
    <span
      className="music-album-artist"
    >
      test artist
    </span>
  </h6>
</div>
`;
